js input event working

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h2>Status: <code id="statusField">NO-STATUS</code></h2>
   <div id="listener"></div>
   <div>
-    <button type="button" onclick="handleMessage('hello world')">Click Me!</button>
+    <button type="button" onclick="ToggleJsEvent()">Toggle JS Event</button>
     <button type="button" onclick="alert('Hello world!')">Click Me!</button>
     <button type="button" onclick="alert('Hello world!')">Click Me!</button>
     <button type="button" onclick="alert('Hello world!')">Click Me!</button>
@@ -26,7 +26,7 @@
     <div id="pepperInputLog" style="float:left;margin-left: 20px;height:1000px;width:500px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
     </div> 
   </div>
-  <script type="text/javascript">InitializeApp(); </script>
+  <script type="text/javascript">ToggleJsEvent(); </script>
 
   <!--   <textarea rows="50" col="200"id="jslog" style="margin-left: 0px; margin-right: 0px; width: 400px;"></textarea> -->
 </body>
