--- a/index.html
+++ b/index.html
@@ -6,24 +6,30 @@
   <title>Input Logger</title>
   <script type="text/javascript" src="logger.js"></script>
   <script type="text/javascript" src="jsInputLogger.js"></script>
-  <script type="text/javascript" src="example.js"></script>
+  <script type="text/javascript" src="naclInputLogger.js"></script>
 </head>
 <body id="body">
   <h1>Input Logger</h1>
-  <h2>Status: <code id="statusField">NO-STATUS</code></h2>
-  <div id="listener"></div>
+  <div id="listener">
+    <script type="text/javascript">
+    var listener = document.getElementById('listener');
+    listener.addEventListener('load', moduleDidLoad, true);
+    listener.addEventListener('message', handleMessage, true);
+    </script>
+    <embed id="naclLogger"
+    width=0 height=0
+    src="naclLogger.nmf"
+    type="application/x-pnacl" />
+  </div>
   <div>
     <button type="button" onclick="ToggleJsEvent()">Toggle JS Event</button>
-    <button type="button" onclick="alert('Hello world!')">Click Me!</button>
-    <button type="button" onclick="alert('Hello world!')">Click Me!</button>
-    <button type="button" onclick="alert('Hello world!')">Click Me!</button>
   </div>
   <!--   <textarea rows="50" col="200" id="nacllog" style="margin-left: 0px; margin-right: 0px; width: 400px;"></textarea> -->
   <div>
     <div id="jsInputLog" style="float:left;margin-left: 0px;height:1000px;width:500px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
     </div>
 
-    <div id="pepperInputLog" style="float:left;margin-left: 20px;height:1000px;width:500px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
+    <div id="naclInputLog" style="float:left;margin-left: 20px;height:1000px;width:500px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
     </div> 
   </div>
   <script type="text/javascript">ToggleJsEvent(); </script>
