add delay toggle

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <h1> input</h1>
 <div>
   <button type="button" onclick="ToggleJsEvent()">Toggle JS Event</button>
+  <button type="button" onclick="toggleDelay()">Toggle nacl Event Delay</button>
 </div>
 <!--   <textarea rows="50" col="200" id="nacllog" style="margin-left: 0px; margin-right: 0px; width: 400px;"></textarea> -->
 <div>
